<resources>
    <string name="app_name">Answr</string>
    <!--Titles Text-->
    <string name="sid">Student ID</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="class_code">Class Code</string>
    <string name="email_address">Email Address</string>
    <string name="welcome_text">Welcome!\nWho are you?</string>
    <string name="your_name">Your Name</string>
    <string name="your_class_name">Your Class Name</string>

    <!--Buttons Text-->
    <string name="student_but_name">Student</string>
    <string name="teacher_but_name">Teacher</string>
    <string name="done_but_name">Done</string>
    <string name="next_but_name">Next</string>

    <!--Hint Text-->
    <string name="sid_hint">123456789</string>
    <string name="email_hint">youremail@ucdavis.edu</string>
    <string name="class_code_hint">123456</string>
    <string name="first_name_hint">First</string>
    <string name="last_name_hint">Last</string>
    <string name="your_name_hint">First Last</string>
    <string name="your_class_name_hint">Class Name</string>
    <string name="enter_choice_here">Enter Choice Here</string>

    <!-- Quiz Question Choices -->
    <string-array name="question_type">
        <item>Multiple Choice</item>
        <item>Short Answer</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_tabbed">testTabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_student_quiz_screen">StudentQuizScreen</string>
    <string name="title_activity_teacher_create_quiz">TeacherCreateQuiz</string>


</resources>
