<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.henrylee.hackdavis2.TitleScreen">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/teacher_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:onClick="startTeacher"
            android:padding="0dp"
            android:text="@string/teacher_but_name" />

        <Button
            android:id="@+id/student_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:onClick="startStudent"
            android:text="@string/student_but_name" />
    </LinearLayout>

    <TextView
        android:id="@+id/title_screen_title_text"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="83dp" />
</android.support.constraint.ConstraintLayout>
